# MandelbrotSet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mandelbrot.py
input/: params.txt
src/: CMakeLists.txt  Colour.cpp  Colour.h  ColourMap.cpp  ColourMap.h  ColourMaps.cpp  ColourMaps.h  Constants.h  FileReader.cpp  FileReader.h  ImageProcessor.cpp  ImageProcessor.h  ImageWriter.cpp  ImageWriter.h  Main.cpp  MandelbrotSet.cpp  MandelbrotSet.h  Utils.cpp  Utils.h
